# netbox-fms

./: .gitignore  CHANGELOG.md  IDEAS.md  Makefile  NETBOX_CABLEPATH_BUG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  entrypoint-dev.sh
.devcontainer/configuration/: plugins.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  zensical.toml
docs/developer/: api-examples.md  architecture.md  contributing.md  style-guide.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: cable-profiles.md  choices.md
docs/superpowers/plans/: 2026-03-12-splice-plan-redesign.md  2026-03-13-closure-fiber-overview.md  2026-03-13-unified-splice-visualization.md  2026-03-15-data-integrity.md  2026-03-15-performance-cleanup.md  2026-03-15-security-hardening.md  2026-03-17-fiber-circuits.md  2026-03-17-link-topology.md  2026-03-18-documentation-site.md  2026-03-18-fiber-circuit-trace-view.md  2026-03-18-fibercabletype-tabbed-nav.md  2026-03-18-sample-data-massive.md  2026-03-18-slack-loops.md  2026-03-19-ui-ux-audit-fixes.md
docs/superpowers/specs/: 2026-03-12-splice-plan-redesign-design.md  2026-03-13-closure-fiber-overview-design.md  2026-03-13-unified-splice-visualization-design.md  2026-03-17-fiber-circuits-design.md  2026-03-17-link-topology-redesign.md  2026-03-18-documentation-site-design.md  2026-03-18-fiber-circuit-trace-view-design.md  2026-03-18-fibercabletype-tabbed-nav-design.md  2026-03-18-sample-data-massive-design.md  2026-03-18-slack-loops-design.md  2026-03-19-ui-ux-audit-fixes-design.md
docs/user-guide/: concepts.md  device-fiber-overview.md  fiber-cable-types.md  fiber-cables.md  fiber-circuits.md  roadm-editor.md  splice-planning.md  wavelength-services.md  wdm-nodes.md
netbox_fms/: __init__.py  cable_profiles.py  choices.py  constants.py  export.py  filters.py  forms.py  models.py  monkey_patches.py  navigation.py  provisioning.py  search.py  services.py  signals.py  tables.py  template_content.py  trace.py  trace_hops.py  urls.py  views.py  wdm_constants.py
netbox_fms/api/: serializers.py  urls.py  views.py
netbox_fms/graphql/: filters.py  schema.py  types.py
netbox_fms/management/commands/: create_sample_data.py
netbox_fms/migrations/: 0001_initial.py  0002_buffertube_stripe_color_and_more.py  0003_fiberstrand_front_port_alter_spliceplanentry_fiber_a_and_more.py  0004_spliceproject.py  0005_remove_spliceplan_mode_remove_spliceplan_tray_and_more.py  0006_rework_spliceplanentry.py  0007_closurecableentry.py  0008_closurecableentry_entrance_label.py  0009_populate_entrance_label.py  0010_drop_entrance_port.py  0011_fiberpathloss_unique_cable_wavelength.py  0012_ribbontemplate_unique_constraint.py  0013_fiberstrand_front_port_a.py  0014_copy_front_port_to_front_port_a.py  0015_drop_front_port_add_front_port_b.py  0016_delete_fiberpathloss.py  0017_fibercircuit.py  0018_fibercircuitpath_fibercircuitnode.py  0019_fibercabletype_buffer_tube_template_count_and_more.py  0020_spliceplanentry_is_express.py  0021_slackloop.py  0022_wavelengthservice_wdmdevicetypeprofile_wdmnode_and_more.py  0023_fibercabletype_construction_image.py  0024_trayprofile.py  0025_tubeassignment.py  0026_add_trayprofile_max_fibers.py  0027_rename_stripe_color_buffertube_marker_color_and_more.py  0028_marker_data_migration.py  0029_alter_spliceplan_options_spliceplan_submitted_by_and_more.py  0030_rename_splice_plan_statuses.py  0031_remove_wdm_models.py  0032_cabletype_outer_diameter_twist.py  0032_mark_unit_marks_installer.py  0033_mark_unit_marks_installer.py  0034_remove_fibercabletype_fiber_type_and_more.py  0035_fibercabletype_color_scheme.py
netbox_fms/static/netbox_fms/: bundle.cjs  package-lock.json  (+1 more)
tests/: conftest.py  test_api.py  test_cabletype_physical.py  test_changelog_required.py  test_circuit_wizard.py  test_closure_cable_flow.py  test_closure_entry_cable_filter.py  test_color_schemes.py  test_create_sample_data.py  test_data_integrity.py  test_export.py  test_fiber_attenuation_spec.py  test_fiber_circuit_api.py  test_fiber_circuit_performance.py  test_fiber_circuit_protection.py  test_fiber_circuit_provisioning.py  test_fiber_circuit_trace.py  test_fiber_circuits.py  test_fiber_claims_api.py  test_fiber_overview.py  test_fibercable_marks_installer.py  test_graphql.py  test_link_topology.py  test_markers.py  test_model_coverage.py  test_models.py  test_navigation.py  test_pending_work_apply.py  test_performance.py  test_sample_data_counters.py  test_security.py  test_services.py  test_signals.py  test_slack_loop_insert.py  test_slack_loops.py  test_splice_closure_wizard.py  test_splice_plan_lifecycle.py  test_trace_hops.py  test_trace_view.py  test_tray_assignment.py  (+4 more)
(+87 files in other folders)
