[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_fms", "netbox_fms.*"]

[tool.setuptools.package-data]
netbox_fms = [
    "templates/**/*",
]

[project]
name = "netbox-fms"
version = "0.1.0"
description = "Fiber Management System - Enhanced fiber cable topology visualization and management for NetBox"
readme = "README.md"
authors = [
    { name = "Jonathan Senecal", email = "contact@jonathansenecal.com" },
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

dependencies = []

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "pre-commit>=4.0.0",
    "pytest",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "ruff",
]
docs = [
    "zensical",
]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-fms"
Source = "https://github.com/jsenecal/netbox-fms"
Tracker = "https://github.com/jsenecal/netbox-fms/issues"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false
message = "chore: bump version {current_version} -> {new_version}"
tag_message = "Release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "netbox_fms/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ", "PIE"]
ignore = ["E501", "N806", "S101", "DJ01"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["N806", "N999"]
"tests/*" = ["S101", "S105", "S106", "E402", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netbox_fms --cov-report=term-missing --reuse-db"
